test/ModuleInterface/ModuleCache/force-module-load-mode-bad-config.code
// RUN: env LANGUAGE_FORCE_MODULE_LOADING=garbage not %target-language-frontend -typecheck %s 2>&1 | %FileCheck %s

// CHECK: error: unknown value for LANGUAGE_FORCE_MODULE_LOADING variable: 'garbage'
